Added Maven compiler plugin Added System.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.username=springuser
 spring.datasource.password=Notweak@123
 
+
+
+spring.data.elasticsearch.cluster-name=
